# infinote-vala

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac
fixup/: fixup.vala
libinfgtk/: Makefile.am  libinfgtk-0.5.deps  libinfgtk-0.5.files  libinfgtk-0.5.gi  libinfgtk-0.5.metadata  libinfgtk-0.5.namespace  libinfgtk-0.5.vapi
libinfinity/: Makefile.am  libinfinity-0.5.deps  libinfinity-0.5.files  libinfinity-0.5.fixup  libinfinity-0.5.gi  libinfinity-0.5.metadata  libinfinity-0.5.vapi
libinftext/: Makefile.am  libinftext-0.5.deps  libinftext-0.5.files  libinftext-0.5.gi  libinftext-0.5.metadata  libinftext-0.5.namespace  libinftext-0.5.vapi
libinftextgtk/: Makefile.am  libinftextgtk-0.5.deps  libinftextgtk-0.5.files  libinftextgtk-0.5.gi  libinftextgtk-0.5.metadata  libinftextgtk-0.5.namespace  libinftextgtk-0.5.vapi
